// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls api and handles an error 1`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    secondsRemaining={0}
    status="LOADING ..."
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        >
          <div
            className="background"
          />
        </div>
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <ul
            class="list-reset"
          />
          <Link
            className="input-container-next-round next-round game-button"
            replace={false}
            to="/game/undefined/round/2"
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
</div>
`;

exports[`calls api and handles an error 2`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    status="ERROR"
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        />
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <ul
            class="list-reset"
          />
          <Link
            className="input-container-next-round next-round game-button"
            replace={false}
            to={
              Object {
                "pathname": "/results",
                "state": Object {
                  "score": 0,
                },
              }
            }
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
</div>
`;

exports[`calls api to get all images on construction 1`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    status="IN-PROGRESS"
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        >
          <div
            className="images-container-single"
            key="abc-Xyz"
          >
            <img
              alt="nice try"
              className="images-container-single-image"
              key="abc-Xyz"
              src="image_1.jpg"
            />
          </div>
          <div
            className="images-container-single"
            key="abc-Xyz"
          >
            <img
              alt="nice try"
              className="images-container-single-image"
              key="abc-Xyz"
              src="image_1.jpg"
            />
          </div>
        </div>
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <ul
            class="list-reset"
          />
          <Link
            className="input-container-next-round next-round game-button"
            replace={false}
            to={
              Object {
                "pathname": "/results",
                "state": Object {
                  "score": 0,
                },
              }
            }
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
</div>
`;

exports[`snapshot testing 1`] = `
<div
  className="flex flex-column"
>
  <Component
    score={0}
    secondsRemaining={0}
    status="LOADING ..."
  />
  <section
    id="middle-region"
  >
    <h1
      className="text-center"
    >
      Round
      <span
        className="round"
      >
        1
      </span>
    </h1>
    <Row
      className="main-container-row"
      tag="div"
    >
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="images-container"
        >
          <div
            className="background"
          />
        </div>
      </Col>
      <Col
        sm="6"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="input-container"
        >
          <h5>
            Guess the search term
          </h5>
          <ul
            class="list-reset"
          />
          <Link
            className="input-container-next-round next-round game-button"
            replace={false}
            to="/game/undefined/round/2"
          >
            Next
          </Link>
        </div>
      </Col>
    </Row>
  </section>
</div>
`;
